cmake_minimum_required(VERSION 3.13)
project(algorithm)
set(CMAKE_CXX_STANDARD 98)

#add_executable(packet packet.c)
#add_executable(twoSum twoSum.c)
#add_executable(addLinkNum addLinkNum.c)
#add_executable(longestSubstring longestSubstring.c)
#add_executable(removeDuplicates removeDuplicates.c)
#add_executable(findMedian findMedian.c)
#add_executable(longestPalindrome longestPalindrome.c)
#add_executable(reverseNumber reverseNumber.c)
#add_executable(zTransform zTransform.c)
#add_executable(atoi atoi.c)
#add_executable(palindrome palindrome.c)
#add_executable(romanToInt romanToInt.c)
#add_executable(longestCommonPrefix longestCommonPrefix.c)
#add_executable(mergeTwoLinkLists mergeTwoLinkLists.c)
#add_executable(effectBrackets effectBrackets.c)
#add_executable(removeElement removeElement.c)
#add_executable(strStr strStr.c)
#add_executable(searchInsert searchInsert.c)
#add_executable(countAndSay countAndSay.c)
add_executable(maxSubArrSum maxSubArrSum.c)